# testLawyer

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  main.py  pyproject.toml
.cursor/rules/: karpathy-guidelines.mdc
PRDs/: Legal_Logic_Implementation.md  Product_System_Architecture.md  UI_Design_Spec.md
docker/: nginx.conf
docs/: DEPLOY_DOCKER.md  HANDOFF.md  RESULT_REVIEW_AND_EXPORT.md
legal_calc/: __init__.py  export.py  money.py  private_lending.py  report_models.py  version.py
legal_calc/common/: __init__.py  dates.py  lpr_json_file.py  lpr_provider.py
legal_calc/data/: __init__.py  lpr_1y_cny.json
legal_calc/rental/: __init__.py  engine.py  models.py
tests/: test_dates.py  test_excel_export.py  test_export_private_lending.py  test_export_rental.py  test_lpr_json_file.py  test_main_api.py  test_private_lending.py  test_rental.py  test_rental_biz.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.css  App.tsx  PrivateLendingPanel.tsx  RentalPanel.tsx  calcShared.tsx  main.tsx
