[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-calc"
version = "0.1.0"
description = "法律计算器骨架：民间借贷 / 房屋租赁（业务定稿前仅结构与工具函数）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
legal_calc = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
